Refactor database connection and update dependencies
- Changed keyspace name in config.yaml from 'threads-go-keyspace' to 'threads_go_keyspace'.
- Added new dependencies for Astra DB connection in go.mod and updated go.sum.
- Implemented AstraDB connection logic in shared/database/astra.go.
- Enhanced user service main.go to load environment variables and establish a connection to Astra DB.
- Introduced helper function for environment variable retrieval in shared/helpers/env.go.

--- a/config.yaml
+++ b/config.yaml
@@ -4,4 +4,4 @@ database:
   username: token
   token: token
   path: ./secure-connect.zip
-  keyspace: threads-go-keyspace
+  keyspace: threads_go_keyspace
