Refactor user service and update dependencies
- Renamed 'customer_server' to 'user_server' in config.yaml and updated keyspace name.
- Added new dependencies for JWT and Redis in go.mod and updated go.sum.
- Implemented JWT generation and validation in shared/helpers/jwt.go.
- Enhanced user controller to include token generation upon user creation.
- Updated user.proto and user.pb.go to reflect changes in user model and response structure.
- Introduced Redis for token blacklisting to enhance security.
- Created a new schema.sql file for user-related database tables.

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-customer_server:
+user_server:
   port: 50051
 database:
   username: token
   token: token
   path: ./secure-connect.zip
-  keyspace: threads_go_keyspace
+  keyspace: threads_keyspace
