Update configuration, add processor service, and implement follow/unfollow functionality
- Updated config.yaml to include processor server and queue settings.
- Added new processor service with outbox message handling.
- Implemented follow and unfollow user functionality in user service.
- Introduced Kafka producer and consumer for message handling.
- Updated user.proto and processor.proto to define new message types and service methods.
- Enhanced user repository to support follow/unfollow operations and event logging.

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,15 @@
 user_server:
-  port: 50051
+  port: 500051
+processor-server:
+  port: 500052
+queue:
+  brokers:
+    - "127.0.0.1:9042"
+    - "127.0.0.1:9043"
+    - "127.0.0.1:9044"
+  topic: outbox
+  group_id: processor-service
+
 database:
   username: token
   token: token
