Fix configuration and enhance user service functionality
- Corrected YAML configuration keys from snake_case to kebab-case for consistency.
- Updated user service request parameters to use dynamic user IDs instead of hardcoded values.
- Added structured logging for user service address and user ID during follow operations.
- Simplified JWT validation error handling for missing claims.

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-user_server:
-  port: 500051
+user-server:
+  port: 50051
 processor-server:
-  port: 500052
+  port: 50052
 queue:
   brokers:
     - "127.0.0.1:9092"
