Update user service and configuration
- Added support for user authentication with JWT, including login and refresh token functionality.
- Enhanced user creation process to hash passwords before storage.
- Updated user repository to include a method for fetching users by email.
- Modified configuration to include Kafka username and password for secure connections.
- Refactored processor service to integrate user authentication and improve event handling.
- Updated .gitignore to exclude kafka.properties.

--- a/config.yaml
+++ b/config.yaml
@@ -4,11 +4,10 @@ processor-server:
   port: 50052
 queue:
   brokers:
-    - "127.0.0.1:9092"
-    - "127.0.0.1:9093"
-    - "127.0.0.1:9094"
-  topic: outbox
-  group_id: processor-service
+    - "kafka-gcp-europewest1.streaming.datastax.com:9093"
+  topic: users-topic
+  group_id: processor-service-group
+  username: witty-tenant
 
 database:
   username: token
