feat: update GetPostWithMetadata RPC and related repository logic to include user initialization and engagement counts

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 ASTRA_TOKEN=your_astra_token
+JWT_SECRET=your_jwt_secret
+REDIS_URL=your_redis_url
+KAFKA_PASSWORD=your_kafka_password
+REDIS_URL=your_redis_url
