feat: implement comment service with CRUD operations
- Added gRPC service definition for comments in proto file.
- Implemented CommentService with CreateComment, GetComment, and HandleCommentsUpsert methods.
- Created repository for comment data management with Cassandra.
- Integrated Kafka consumer for handling comment events.
- Added database schema for comments with appropriate tables.
- Set up HTTP server for the comment service with graceful shutdown.
- Updated configuration to include comment server settings.

--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,8 @@ post-server:
   port: 50052
 processor-server:
   port: 50053
+comment-server:
+  port: 50054
 queue:
   brokers:
     - "kafka-gcp-europewest1.streaming.datastax.com:9093"
